# Vision-Agents

./: .coderabbit.yaml  .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  PRODUCTION.md  PROJECT.md  README.md  SECURITY.md  conftest.py  dev.py  docker-compose.yml  pyproject.toml  pytest.ini  start.sh
agents-core/: README.md  pyproject.toml
agents-core/vision_agents/core/: __init__.py  instructions.py  warmup.py
agents-core/vision_agents/core/agents/: __init__.py  agent_launcher.py  agent_types.py  agents.py  conversation.py  events.py  exceptions.py  transcript_buffer.py
agents-core/vision_agents/core/edge/: __init__.py  call.py  edge_transport.py  events.py  types.py
agents-core/vision_agents/core/events/: __init__.py  base.py  manager.py
agents-core/vision_agents/core/llm/: __init__.py  events.py  function_registry.py  llm.py  llm_test.py  llm_types.py  realtime.py  wrap_function.py  wrap_method.py
agents-core/vision_agents/core/mcp/: __init__.py  mcp_base.py  mcp_manager.py  mcp_server_local.py  mcp_server_remote.py  tool_converter.py
agents-core/vision_agents/core/observability/: __init__.py  agent.py  collector.py  metrics.py
agents-core/vision_agents/core/processors/: __init__.py  base_processor.py
agents-core/vision_agents/core/profiling/: __init__.py  base.py
agents-core/vision_agents/core/rag/: __init__.py  rag.py
agents-core/vision_agents/core/runner/: __init__.py  runner.py
agents-core/vision_agents/core/stt/: __init__.py  events.py  stt.py
agents-core/vision_agents/core/tts/: events.py  manual_test.py  testing.py  tts.py
agents-core/vision_agents/core/turn_detection/: README.md  __init__.py  events.py  (+1 more)
agents-core/vision_agents/testing/: __init__.py  _events.py  _judge.py  _mock_tools.py  _run_result.py  _session.py
examples/02_golf_coach_example/: README.md  golf_coach.md  golf_coach_example.py  golf_coach_with_metrics.py  pyproject.toml
examples/03_phone_and_rag_example/: README.md  conftest.py  inbound_phone_and_rag_example.py  instructions.md  outbound_phone_example.py  pyproject.toml  pytest.ini  utils.py
examples/03_phone_and_rag_example/knowledge/: chat.md  feeds.md  moderation.md  needle_in_haystack.md  video.md
examples/05_security_camera_example/: README.md  __init__.py  instructions.md  poster_generator.py  pyproject.toml  security_camera_example.py  security_camera_processor.py
examples/06_prometheus_metrics_example/: README.md  docker-compose.yml  prometheus_metrics_example.py  pyproject.toml
examples/07_deploy_example/: .env.example  Dockerfile  Dockerfile.gpu  README.md  deploy_example.py  docker-compose.yml  instructions.md  pyproject.toml
examples/07_deploy_example/helm/: Chart.yaml  values.yaml
examples/08_agent_server_example/: README.md  agent_server_example.py  pyproject.toml
examples/web_ui_agent/backend/: .env.example  instructions.md  pyproject.toml
plugins/assemblyai/example/: assemblyai_stt_example.py  pyproject.toml
plugins/aws/: README.md  pyproject.toml
plugins/aws/example/: .env.example  aws_realtime_function_calling_example.py  aws_realtime_nova_example.py  pyproject.toml
plugins/aws/tests/: test_aws.py  test_aws_realtime.py  test_tts.py
plugins/cartesia/example/: README.md  main.py  narrator-example.py  pyproject.toml  sonic3-info.md
plugins/decart/: README.md  pyproject.toml
plugins/decart/example/: README.md  decart_example.py  pyproject.toml
plugins/decart/tests/: test_decart_restyling.py  test_decart_video_track.py
plugins/deepgram/: README.md  pyproject.toml
plugins/deepgram/example/: README.md  deepgram_tts_example.py  pyproject.toml
plugins/deepgram/tests/: test_deepgram_stt.py  test_deepgram_tts.py
plugins/fast_whisper/: README.md  pyproject.toml
plugins/fast_whisper/example/: fast_whisper_example.py  pyproject.toml
plugins/fast_whisper/tests/: test_fast_whisper_stt.py
plugins/getstream/: PROTOBUF_GENERATION.md  README.md  _generate_sfu_events.py  pyproject.toml
plugins/getstream/tests/: test_getstream_plugin.py  test_message_chunking.py  test_sfu_events.py  test_stream_conversation.py  test_stream_edge_transport.py
plugins/huggingface/: README.md  pyproject.toml
plugins/huggingface/tests/: test_huggingface.py  test_transformers_llm.py  test_transformers_vlm.py
plugins/kokoro/: README.md  pyproject.toml
plugins/kokoro/example/: README.md  kokoro_example.py  pyproject.toml
plugins/kokoro/tests/: test_tts.py
plugins/moondream/: README.md  pyproject.toml
plugins/moondream/example/: README.md  moondream_vlm_example.py  pyproject.toml
plugins/moondream/tests/: test_moondream.py  test_moondream_local.py  test_moondream_local_vlm.py  test_moondream_vlm.py
plugins/openrouter/: README.md  pyproject.toml
plugins/openrouter/example/: openrouter_example.py  openrouter_vlm_example.py  pyproject.toml
plugins/openrouter/tests/: test_openrouter_llm.py
plugins/qwen/: README.md  pyproject.toml
plugins/qwen/example/: README.md  env.example  pyproject.toml  qwen_realtime_example.py
plugins/qwen/tests/: test_qwen_realtime.py
plugins/roboflow/: README.md  pyproject.toml
plugins/roboflow/example/: README.md  env.example  pyproject.toml  roboflow_example.py
plugins/roboflow/tests/: test_roboflow.py
plugins/smart_turn/: README.md  pyproject.toml
plugins/smart_turn/example/: smart_turn_example.py
plugins/smart_turn/tests/: test_smart_turn.py
plugins/turbopuffer/: README.md  pyproject.toml
plugins/turbopuffer/tests/: test_turbopuffer_rag.py
plugins/twilio/: README.md  pyproject.toml
plugins/twilio/tests/: test_audio.py  test_twilio.py
plugins/ultralytics/: README.md  pyproject.toml
plugins/ultralytics/tests/: test_ultralytics.py
plugins/vogent/: pyproject.toml
plugins/vogent/example/: vogent_example.py
plugins/vogent/tests/: test_vogent.py
plugins/xai/: README.md  pyproject.toml
plugins/xai/example/: README.md  __init__.py  xai_realtime_example.py
plugins/xai/tests/: test_xai_llm.py  test_xai_realtime.py  test_xai_tools.py
(+580 files in other folders)
