[project]
name = "vision-agents-golf"
version = "0.0.0"
requires-python = ">=3.13,<3.14"

# put only what this example needs
dependencies = [
  "python-dotenv>=1.0",
  "vision-agents",
  "vision-agents-plugins-openai",
  "vision-agents-plugins-getstream",
  "vision-agents-plugins-ultralytics",
  "vision-agents-plugins-gemini",
  # Optional: for metrics
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-prometheus",
  "prometheus-client",
]

[tool.uv.sources]
"vision-agents" = {path = "../../agents-core", editable=true}
"vision-agents-plugins-deepgram" = {path = "../../plugins/deepgram", editable=true}
"vision-agents-plugins-ultralytics" = {path = "../../plugins/ultralytics", editable=true}
"vision-agents-plugins-openai" = {path = "../../plugins/openai", editable=true}
"vision-agents-plugins-getstream" = {path = "../../plugins/getstream", editable=true}
"vision-agents-plugins-gemini" = {path = "../../plugins/gemini", editable=true}
