[project]
name = "security-camera-example"
version = "0.0.0"
requires-python = ">=3.13"

dependencies = [
  "python-dotenv>=1.0",
  "vision-agents-plugins-deepgram",
  "vision-agents-plugins-elevenlabs",
  "vision-agents-plugins-getstream",
  "vision-agents-plugins-gemini",
  "vision-agents-plugins-moondream",
  "vision-agents",
  "opencv-python>=4.8.0",
  "google-genai>=1.33.0",
  "face-recognition>=1.3.0",
  "ultralytics>=8.0.0",
  "tweepy>=4.14.0",
]

[tool.uv.sources]
"vision-agents-plugins-deepgram" = {path = "../../plugins/deepgram", editable=true}
"vision-agents-plugins-elevenlabs" = {path = "../../plugins/elevenlabs", editable=true}
"vision-agents-plugins-getstream" = {path = "../../plugins/getstream", editable=true}
"vision-agents-plugins-gemini" = {path = "../../plugins/gemini", editable=true}
"vision-agents-plugins-moondream" = {path = "../../plugins/moondream", editable=true}
"vision-agents" = {path = "../../agents-core", editable=true}
