[project]
name = "deploy-example"
version = "0.0.0"
requires-python = ">=3.13"

dependencies = [
  "python-dotenv>=1.0",
  "vision-agents-plugins-deepgram",
  "vision-agents-plugins-elevenlabs",
  "vision-agents-plugins-getstream",
  "vision-agents-plugins-gemini",
  "vision-agents>=0.2.8",
]

# For local development, uncomment the following:
# [tool.uv.sources]
# "vision-agents-plugins-deepgram" = {path = "../../plugins/deepgram", editable=true}
# "vision-agents-plugins-elevenlabs" = {path = "../../plugins/elevenlabs", editable=true}
# "vision-agents-plugins-getstream" = {path = "../../plugins/getstream", editable=true}
# "vision-agents-plugins-gemini" = {path = "../../plugins/gemini", editable=true}
# "vision-agents" = {path = "../../agents-core", editable=true}

