[project]
name = "agent-server-example"
version = "0.0.0"
requires-python = ">=3.10"

# Dependencies that the example actually uses
dependencies = [
    "python-dotenv>=1.0",
    "vision-agents-plugins-deepgram",
    "vision-agents-plugins-elevenlabs",
    "vision-agents-plugins-getstream",
    "vision-agents-plugins-gemini",
    "vision-agents",
    "pyinstrument>=5.1.1",
]

[tool.uv.sources]
"vision-agents-plugins-deepgram" = { path = "../../plugins/deepgram", editable = true }
"vision-agents-plugins-elevenlabs" = { path = "../../plugins/elevenlabs", editable = true }
"vision-agents-plugins-getstream" = { path = "../../plugins/getstream", editable = true }
"vision-agents-plugins-gemini" = { path = "../../plugins/gemini", editable = true }
"vision-agents" = { path = "../../agents-core", editable = true }
