[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vision-agents-plugins-aws"
dynamic = ["version"]
description = "AWS (Bedrock) LLM integration for Vision Agents"
readme = "README.md"
keywords = ["aws", "bedrock", "LLM", "AI", "voice agents", "agents"]
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "vision-agents",
    "onnxruntime",
    "boto3>=1.42.7",
    "aws-sdk-bedrock-runtime>=0.2.0",
]

[project.urls]
Documentation = "https://visionagents.ai/"
Website = "https://visionagents.ai/"
Source = "https://github.com/GetStream/Vision-Agents"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", search_parent_directories = true, fallback_version = "0.0.0" }

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["/vision_agents"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
