[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vision-agents-plugins-smart-turn"
dynamic = ["version"]
description = "Smart Turn detection plugin for Vision Agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "vision-agents",
    "numpy>=2.2.6,<2.3",
    "httpx>=0.27.0",
    "onnxruntime>=1.20.1",
    "transformers>=4.48.2",
]

[project.urls]
Documentation = "https://visionagents.ai/"
Website = "https://visionagents.ai/"
Source = "https://github.com/GetStream/Vision-Agents"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", search_parent_directories = true, fallback_version = "0.0.0" }

[tool.hatch.build.targets.wheel]
packages = [".", "vision_agents"]

[tool.hatch.build.targets.sdist]
include = ["/vision_agents"]

[tool.uv.sources]
vision-agents = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

