[project]
name = "simple-agents-example"
version = "0.0.0"
requires-python = ">=3.13"

# Dependencies that the example actually uses
dependencies = [
  "python-dotenv>=1.0",
  "vision-agents-plugins-deepgram",
  "vision-agents-plugins-elevenlabs",
  "vision-agents-plugins-anthropic",
  "vision-agents-plugins-getstream",
  "vision-agents-plugins-openai",
  "vision-agents-plugins-smart-turn",
  "vision-agents-plugins-cartesia",
  "vision-agents-plugins-gemini",
  "vision-agents-plugins-vogent",
  "vision-agents",
  "openai>=1.101.0",
  "anthropic>=0.66.0",
  "google-genai>=1.33.0",
  "fal-client>=0.5.3",
  "pyinstrument>=5.1.1",
  "pytest>=8.0",
  "pytest-asyncio>=1.0",
]

[tool.uv.sources]
"vision-agents-plugins-deepgram" = {path = "../../plugins/deepgram", editable=true}
"vision-agents-plugins-elevenlabs" = {path = "../../plugins/elevenlabs", editable=true}
"vision-agents-plugins-anthropic" = {path = "../../plugins/anthropic", editable=true}
"vision-agents-plugins-getstream" = {path = "../../plugins/getstream", editable=true}
"vision-agents-plugins-openai" = {path = "../../plugins/openai", editable=true}
"vision-agents-plugins-smart-turn" = {path = "../../plugins/smart_turn", editable=true}
"vision-agents-plugins-cartesia" = {path = "../../plugins/cartesia", editable=true}
"vision-agents-plugins-gemini" = {path = "../../plugins/gemini", editable=true}
"vision-agents-plugins-vogent" = {path = "../../plugins/vogent", editable=true}
"vision-agents" = {path = "../../agents-core", editable=true}
