[project]
name = "cartesia-example"
version = "0.0.0"
requires-python = ">=3.10"

dependencies = [
    "vision-agents",
    "python-dotenv>=1.0",
    "vision-agents-plugins-cartesia",
    "vision-agents-plugins-getstream",
    "vision-agents-plugins-openai",
    "vision-agents-plugins-deepgram",
]

[tool.uv.sources]
vision-agents = { editable = true }
vision-agents-plugins-cartesia = { editable = true }
vision-agents-plugins-getstream = { editable = true }
vision-agents-plugins-openai = { editable = true }
vision-agents-plugins-deepgram = {  editable = true }
